Finished story component

--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img class="story__img" src="img/nat-8.jpg" alt="person on a tour">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
 
                     <div class="story__text">
@@ -272,6 +275,39 @@
                         </p>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img class="story__img" src="img/nat-9.jpg" alt="person on a tour">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <div class="u-margin-bottom-small">
+                            <h3 class="heading-tertiary">
+                                WOW! My life is completely different now
+                            </h3>
+                        </div>
+
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, accusantium dolor fugit ad,
+                            provident illum animi ipsum debitis eius possimus totam consectetur quod mollitia. Nostrum
+                            consequatur distinctio exercitationem maiores architecto?
+                            provident illum animi ipsum debitis eius possimus totam consectetur quod mollitia. Nostrum
+                            consequatur distinctio exercitationem maiores architecto?
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text">
+                <a href="#" class="btn-text">
+                    Read all stories &rarr;
+                </a>
             </div>
         </section>
     </main>
