--- a/index.html
+++ b/index.html
@@ -244,6 +244,19 @@
         </section>
 
         <section class="section-stories">
+            <!-- This section will have the same size as section-stories -->
+            <!-- And will display a background video -->
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <!-- 
+                     Both 2 formats to make sure they work across
+                     all different browsers
+                    -->
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                    Your browser is not supported!
+                </video>
+            </div>
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people genuinely happy
