--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 
@@ -153,7 +153,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -190,7 +190,7 @@
                                         $297
                                     </p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#popup" class="btn btn--white">Book now</a>
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                                         $497
                                     </p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#popup" class="btn btn--white">Book now</a>
                             </div>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
                                         $897
                                     </p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#popup" class="btn btn--white">Book now</a>
                             </div>
                         </div>
                     </div>
@@ -436,6 +436,35 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        &nbsp;
+        <div class="popup__content">
+            <div class="popup__left">
+                <img class="popup__img" src="img/nat-8.jpg" alt="Tour photo">
+                <img class="popup__img" src="img/nat-9.jpg" alt="Tour photo">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">
+                    Start booking now
+                </h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Important &ndash; Please read these terms before booking
+                </h3>
+                <p class="popup__text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic veniam tempore culpa voluptatum quos
+                    deleniti nostrum eos omnis ut quia ipsam maiores facilis, libero blanditiis itaque! Molestias
+                    impedit tenetur accusamus?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis esse eum atque vero illum
+                    officiis ut provident ipsum labore, consequuntur, obcaecati consequatur deserunt dolorem, quos
+                    aliquam non? Voluptatum, ab nobis.
+                </p>
+
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
 
     <!-- <section class="grid-test">
         <div class="row">
