--- a/index.html
+++ b/index.html
@@ -93,9 +93,30 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+
+                        <!-- width descriptor, have to look the width of the img -->
+                        <!-- Inform the browser about the width without needing to -->
+                        <!-- Down load the images -->
+                        <!-- sizes attribute informs the browser about the approximate
+                         width of the img at different viewport widths (check with devTools).
+                        The last value is the default
+                         -->
+                        <!-- "ordinary" src is also included for legacy browsers -->
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" src="img/nat-1-large.jpg"
+                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 1"
+                            class="composition__photo composition__photo--p1">
+
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" src="img/nat-2-large.jpg"
+                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 2"
+                            class="composition__photo composition__photo--p2">
+
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" src="img/nat-3-large.jpg"
+                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 3"
+                            class="composition__photo composition__photo--p3">
+
+                        <!-- <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3"> -->
                     </div>
                 </div>
             </div>
@@ -409,7 +430,9 @@
                     media="(max-width: 37.5em)">
                 <!-- Always at least one img, which will be the fallback -->
                 <!-- Here, in addition, is implemented density switching inside the art direction -->
-                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo">
+                <!-- "ordinary" src is also included for legacy browsers -->
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" src="img/logo-green-2x.png"
+                    alt="Full logo">
             </picture>
             <!-- DOC responsive image in html. Density switching use case -->
             <!-- route and density descriptor -->
