--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         The last value is the default
                          -->
                         <!-- "ordinary" src is also included for legacy browsers -->
-                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" src="img/nat-1-large.jpg"
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
                             sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 1"
-                            class="composition__photo composition__photo--p1">
+                            src="img/nat-1-large.jpg" class="composition__photo composition__photo--p1">
 
                         <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" src="img/nat-2-large.jpg"
                             sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 2"
@@ -477,8 +477,12 @@
         &nbsp;
         <div class="popup__content">
             <div class="popup__left">
-                <img class="popup__img" src="img/nat-8.jpg" alt="Tour photo">
-                <img class="popup__img" src="img/nat-9.jpg" alt="Tour photo">
+                <img class="popup__img" srcset="img/nat-8-small.jpg 667w, img/nat-8-large.jpg 2000w"
+                    sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" src="img/nat-8.jpg"
+                    alt="Tour photo">
+                <img class="popup__img" srcset="img/nat-9-small.jpg 667w, img/nat-9-large.jpg 2000w"
+                    sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" src="img/nat-9.jpg"
+                    alt="Tour photo">
             </div>
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
