--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
                          -->
                         <!-- "ordinary" src is also included for legacy browsers -->
                         <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
-                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 1"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 1"
                             src="img/nat-1-large.jpg" class="composition__photo composition__photo--p1">
 
                         <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" src="img/nat-2-large.jpg"
-                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 2"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 2"
                             class="composition__photo composition__photo--p2">
 
                         <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" src="img/nat-3-large.jpg"
-                            sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 3"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 3"
                             class="composition__photo composition__photo--p3">
 
                         <!-- <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
