--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- DOCS this line is crucial for responsive design to work -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
     <!-- Not needed anymore due to the npm build process -->
+    <!-- DOCS Comment if build and uncomment if developing -->
     <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
